# kinozal_django_nginx

./: .env_exm  README.md  docker-compose.yml  pyproject.toml
nginx/: Dockerfile
