[tool.poetry]
name = "django_postgres"
version = "0.0.1"
description = "Начальная структура онлайн кинотеатра"
authors = ["petr777 <Mazurok Petr>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^4.0.1"
python-dotenv = "^0.20.0"
psycopg2-binary = "^2.9.3"

# django
django = "^4.0.4"
django-split-settings = "^1.1.0"
django-debug-toolbar = "^3.2.4"
gunicorn = "^20.1.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
